--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -1,43 +1,21 @@
+<div class="row">
+  <div class="col-md-4">
+    <h3><%= @place.name %></h3>
+    <p><strong>Address: </strong><%= @place.address %></p>
+    <p><strong>Phone: </strong><%= @place.phone %></p>
+    <p><strong>Website: </strong><%= @place.website %></p>
+    <p><strong>Description: </strong><%= @place.description %></p>
+  </div> <!-- end left column -->
+
+  <div class="col-md-8">
+    <h3>Reviews</h3>
+  </div>
 
 
-<p>
-  <strong>Name:</strong>
-  <%= @place.name %>
-</p>
+</div> <!-- end row -->
 
-<p>
-  <strong>Address:</strong>
-  <%= @place.address %>
-</p>
-
-<p>
-  <strong>Description:</strong>
-  <%= @place.description %>
-</p>
-
-<p>
-  <strong>Phone:</strong>
-  <%= @place.phone %>
-</p>
-
-<p>
-  <strong>Website:</strong>
-  <%= @place.website %>
-</p>
-
-<p>
-  <strong>User:</strong>
-  <%= @place.user_id %>
-</p>
-
-<%= @place.latitude %>
-<%= @place.longitude %>
 
 <div id="map-canvas" style="width: 230px; height: 230px;"></div>
-
-
-<%= link_to 'Edit', edit_place_path(@place) %> |
-<%= link_to 'Back', places_path %>
 
 <script type="text/javascript">
   function initialize() {
