added scores and stars

--- a/app/views/reviews/_review.html.erb
+++ b/app/views/reviews/_review.html.erb
@@ -1,1 +1,1 @@
-<p><%= review.content %> by <%= review.user.name %></p>
+<p><%= review.content %> by <%= review.user.name %><div class="score_<%= review.id %>"></div></p>
