--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -1,11 +1,14 @@
 <div class="row">
   <div class="col-md-4">
-    <h3><%= @place.name %></h3>
-    <div class="average"></div><br>
-    <p><strong>Address: </strong><%= @place.address %></p>
-    <p><strong>Phone: </strong><%= @place.phone %></p>
-    <p><strong>Website: </strong><%= @place.website %></p>
-    <p><strong>Description: </strong><%= @place.description %></p>
+    <div class="well">
+      <h3><%= @place.name %></h3>
+      <div class="average"></div><br>
+      <p><strong>Address: </strong><%= @place.address %></p>
+      <p><strong>Phone: </strong><%= @place.phone %></p>
+      <p><strong>Website: </strong><%= @place.website %></p>
+      <p><strong>Description: </strong><%= @place.description %></p><br>
+<div id="map-canvas" style="width: 250px; height: 250px;"></div>
+    </div>
   </div> <!-- end left column -->
 
   <div class="col-md-8">
@@ -14,7 +17,7 @@
     <h5>New Review</h5>
       <%= render "reviews/form" %>
     <% end %>
-    <h3>All Reviews</h3>
+    <!-- <h3>All Reviews</h3> -->
     <%= render @reviews %>
   </div>
 
@@ -22,7 +25,6 @@
 </div> <!-- end row -->
 
 
-<div id="map-canvas" style="width: 230px; height: 230px;"></div>
 
 <script type="text/javascript">
   function initialize() {
