--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -8,3 +8,31 @@
   z-index: 1;
   width: 200px;
 }
+
+.landing_title {
+  padding-top: 230px;
+}
+
+.landing_page { 
+  background: image-url("blurred.jpg") no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  height: 100vh;
+}
+
+.navbar {
+  margin-bottom: 0px;
+}
+
+.btn-landing {
+  background: none;
+  border: solid;
+}
+
+.btn-landing:hover {
+  background: none;
+  border: solid;
+  border-color: white;
+  color: white;
+}
